--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,6 +27,7 @@
   "customizations": {
     "vscode": {
       "extensions": [
+        "Shopify.ruby-lsp",
         "marcoroth.stimulus-lsp"
       ]
     }
