--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,6 +23,7 @@
   // "customizations": {},
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root",
+  "initializeCommand": "/bin/sh -c 'if [ ! -f .env ]; then cp .env.sample .env; fi'",
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "bin/setup",
   "customizations": {
